<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>planning_scene_spawner</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="fpfeifer@stud.hs-heilbronn.de">felix</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>rcl_interfaces</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_planning</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>control_msgs</depend>
  <depend>moveit_visual_tools</depend>
  <depend>robot_teleoperation_interface</depend>
  <depend>moveit_servo</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
